# ckanext-file-keeper-cloud

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/file_keeper_cloud/: plugin.py
ckanext/file_keeper_cloud/adapters/: __init__.py  azure_blob.py  gcs.py  libcloud.py  s3.py
ckanext/file_keeper_cloud/tests/: test_plugin.py
