# This file should only contain setuptools related configuration to build the
# extension (i.e. arguments to setup() in setup.py). Add any other project
# information should go to pyproject.toml instead.
#
# TODO: migrate Babel options to pyproject.toml when it's better supported


[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
s3 = file-keeper[s3]
gcs = file-keeper[gcs]
azure = file-keeper[azure]
libcloud = file-keeper[libcloud]

all = file-keeper[cloud,libcloud]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/file_keeper_cloud/i18n/ckanext-file_keeper_cloud.pot
width = 80

[init_catalog]
domain = ckanext-file_keeper_cloud
input_file = ckanext/file_keeper_cloud/i18n/ckanext-file_keeper_cloud.pot
output_dir = ckanext/file_keeper_cloud/i18n

[update_catalog]
domain = ckanext-file_keeper_cloud
input_file = ckanext/file_keeper_cloud/i18n/ckanext-file_keeper_cloud.pot
output_dir = ckanext/file_keeper_cloud/i18n
previous = true

[compile_catalog]
domain = ckanext-file_keeper_cloud
directory = ckanext/file_keeper_cloud/i18n
statistics = true
